jhead (2.86-1) UNRELEASED; urgency=low

  * (NOT RELEASED YET) New upstream release
  * remove patches 01_makefile, 07_jhead.1, 08_jhead.1, 09_long_int,
    10_jhead.1 since they are now included upstream

 -- Ludovic Rousseau <rousseau@debian.org>  Sun, 15 Feb 2009 13:36:28 +0000

jhead (2.85-1) unstable; urgency=low

  * New upstream release
   - Closes: #504194 "CVE-2008-4640: insecure file handling"
  * debian/patches/11_jhead.c.dpatch: removed since included upstream
  * debian/*: change from dpatch to quilt

 -- Ludovic Rousseau <rousseau@debian.org>  Thu, 06 Nov 2008 21:51:09 +0100

jhead (2.84-2) unstable; urgency=high

  * urgency high since it fixes a security RC bug: CVE-2008-4641
  * debian/patches/11_jhead.c.dpatch: Closes: #503645: jhead: CVE-2008-4641
    command injection via filename and insecure file handling

 -- Ludovic Rousseau <rousseau@debian.org>  Fri, 31 Oct 2008 19:53:26 +0100

jhead (2.84-1) unstable; urgency=high

  * New upstream release
   - Closes: #502353 "Security issues fixed in 2.84"
   - Fix CVE-2008-4575: "Buffer overflow in the DoCommand function in jhead
   before 2.84 might allow context-dependent attackers to cause a denial of
   service (crash) via (1) a long -cmd argument and (2) possibly other
   unspecified vectors."
  * debian/patches/05_jhead.1.dpatch: removed since applied upstream
  * debian/patches/10_jhead.1.dpatch: update since not all from
    05_jhead.1.dpatch has been included upstream

 -- Ludovic Rousseau <rousseau@debian.org>  Thu, 16 Oct 2008 21:13:02 +0200

jhead (2.82-1) unstable; urgency=low

  * New upstream release
  * debian/patches/09_long_int.dpatch: avoid some compiler warnings
  * debian/patches/10_jhead.1.dpatch: avoid a lintian warning

 -- Ludovic Rousseau <rousseau@debian.org>  Sat, 24 May 2008 14:01:01 +0200

jhead (2.80-1) unstable; urgency=low

  * New upstream realease
   - remove debian/patches/06_jhead_c.dpatch: included upstream
  * debian/control: add the Homepage: field