@@ -11,10 +11,10 @@ version := $(shell dpkg-parsechangelog | \
 tag:
 	cvs tag -c -F $(subst .,_,debian_version_$(version))
 
-include /usr/share/quilt/quilt.make
+#include /usr/share/quilt/quilt.make
 
 build: build-stamp
-build-stamp: patch
+build-stamp: #patch
 	dh_testdir
 
 	# Add here commands to compile the package.
@@ -22,7 +22,7 @@ build-stamp: patch
 
 	touch build-stamp
 
-clean: unpatch
+clean: #unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
